--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
 	"version": "0.0.1",
 	"description": "An FCC Backend Challenge",
 	"main": "server.js",
+	"engines": {
+		"node": "14.15.3",
+		"npm": "7.11.2"
+	},
 	"scripts": {
 		"start": "nodemon server.js"
 	},
